--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -58,11 +58,16 @@
                         <span>Inventory</span></a>
                 </li> 
                 <hr class="sidebar-divider my-0">
+                 <li class="nav-item nav-qc">
+                    <a class="nav-link nav-qc" th:href="@{/qc}">
+                        <i class="fas fa-fw fa-tachometer-alt"></i>
+                        <span>QC</span></a>
+                </li>
                  <li class="nav-item nav-incoming">
                     <a class="nav-link nav-incoming" th:href="@{/Incoming}">
                         <i class="fas fa-fw fa-tachometer-alt"></i>
                         <span>Incoming List</span></a>
-                </li> 
+                </li>
                 <hr class="sidebar-divider my-0">
                 
                 <li class="nav-item nav-warehouse">
