PRJ4 | Thien | Upload Data With Excel File
sample file included, name "supplier.xlsx"

--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -79,12 +79,12 @@
                         <span>Supplier</span></a>
                 </li>
                 <li class="nav-item nav-supplier">
-                    <a class="nav-link nav-supplier" th:href="@{/customer}">
+                    <a class="nav-link nav-customer" th:href="@{/customer}">
                         <i class="fa-solid fa-person-walking-luggage"></i></i>
                         <span>Customer</span></a>
                 </li>
                  <li class="nav-item nav-goods">
-                    <a class="nav-link nav-supplier" th:href="@{/goods}">
+                    <a class="nav-link nav-goods" th:href="@{/goods}">
                        <i class="fa-solid fa-cookie-bite"></i>
                         <span>Goods Infomation</span></a>
                 </li>
