--- a/WarehouseAPI/src/main/resources/templates/supplier/index.html
+++ b/WarehouseAPI/src/main/resources/templates/supplier/index.html
@@ -24,6 +24,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <i class="fa-solid fa-plus"></i> Add New Supplier
                     </button>
                 </div>
+                <div class="card-header py-3">
+                    <form th:action="@{/api/suppliers/import}" method="post" enctype="multipart/form-data">
+                        <input type="file" th:name="file" />
+                        <input th:type="submit" value="Import" />
+                    </form>
+                </div>
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-bordered" id="tblSl" width="100%" cellspacing="0">
