--- a/WarehouseAPI/src/main/resources/templates/goods/index2.html
+++ b/WarehouseAPI/src/main/resources/templates/goods/index2.html
@@ -66,7 +66,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script>
-//                document.getElementById("btnCreate").onclick = function() {location.href = "/goods/create";};
+                document.getElementById("btnCreate").onclick = function() {location.href = "/goods/create";};
                 $(document).ready(function () {
                     $('.nav-goods').addClass('active');
                     $('#tblGood').dataTable();
