--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -56,7 +56,13 @@
                     <a class="nav-link nav-goodsMaster" th:href="@{/inventory}">
                         <i class="fa-solid fa-boxes-stacked"></i>
                         <span>Inventory</span></a>
-                </li> 
+                </li>
+                <hr class="sidebar-divider my-0">
+                 <li class="nav-item nav-unallocate">
+                    <a class="nav-link nav-unallocate" th:href="@{/allocated/browse}">
+                        <i class="fa-solid fa-boxes-stacked"></i>
+                        <span>Unallocate</span></a>
+                </li>
                 <hr class="sidebar-divider my-0">
                  <li class="nav-item nav-qc">
                     <a class="nav-link nav-qc" th:href="@{/qc}">
