Allocate Request ui

--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -58,6 +58,11 @@
                         <span>Inventory</span></a>
                 </li>
                 <hr class="sidebar-divider my-0">
+                 <li class="nav-item nav-allocate">
+                    <a class="nav-link nav-allocate" th:href="@{/allocated}">
+                        <i class="fa-solid fa-boxes-stacked"></i>
+                        <span>Allocate Request</span></a>
+                </li>
                  <li class="nav-item nav-unallocate">
                     <a class="nav-link nav-unallocate" th:href="@{/allocated/browse}">
                         <i class="fa-solid fa-boxes-stacked"></i>
