--- a/WarehouseAPI/src/main/resources/templates/user/index2.html
+++ b/WarehouseAPI/src/main/resources/templates/user/index2.html
@@ -34,6 +34,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <th>Email</th>
                                     <th>Role</th>
                                     <th></th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -41,12 +42,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <td><button th:text="${item.id}" class="btn btn-primary" th:id="${item.id}" th:onclick="editUser([[${item.id}]])"></button></td>
                                     <td th:text="${item.username}"></td>
                                     <td th:text="${item.email}"></td>
+                                    <!--<td th:text="${item.roles}"></td>-->
                                     <td>
                                         <div th:each="role: ${item.roles}">
                                             <span th:text="${role.name}"></span>
                                         </div>
                                     </td>
                                     <td><a class="btn btn-primary" th:href="@{/user/update/{id}(id=${item.id})}">Update</a></td>
+                                    <td><a class="btn btn-primary" th:href="@{/user/update-role/{id}(id=${item.id})}">Update Role</a></td>
                                 </tr>
                             </tbody>
                         </table>
