--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -57,6 +57,12 @@
                         <i class="fa-solid fa-boxes-stacked"></i>
                         <span>Inventory</span></a>
                 </li>
+                 <li class="nav-item nav-user" sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_MANAGER')">
+                    <a class="nav-link nav-user" th:href="@{/user}">
+                        <i class="fa-solid fa-boxes-stacked"></i>
+                        <span>User</span></a>
+                </li>
+                
                 <hr class="sidebar-divider my-0">
                  <li class="nav-item nav-allocate">
                     <a class="nav-link nav-allocate" th:href="@{/allocated}">
